chore: snippets add ts
Former-commit-id: ecd35358e6c07b994f1c085e39151f4fc174bb7e
Former-commit-id: 8f0d319a5371530e9dc0ebf280f52a452ae04268

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -9,6 +9,8 @@
                 "language": [
                     "javascript",
                     "javascriptreact",
+                    "typescript",
+                    "typescriptreact",
                     "vue",
                     "svelte"
                 ],
