chore: update gitignore
Former-commit-id: f8447137a8c176e1f7dfbad66deb2ecbc99761b8
Former-commit-id: 254b541a3e40e7091ebc8312a7f602546160b92f

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 # personal
-**/old/
-**/*--.lua
+**/bck/**
 **/*--.*
 substitutes--.txt
 scratch_config.json
-
-plugins/markdown.vim
-
 .pre-commit-config.yaml
+
 lazy-lock.json
 
 # Compiled Lua sources
